<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/askForHelpLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        tools:context=".module.help_screens.view.AskForHelpFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/img_logo_from_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/content_together_top_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_logo_together" />

                <ImageView
                    android:id="@+id/img_back_from_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_back_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/img_logo_from_call"
                    app:srcCompat="@drawable/ic_arrow_back" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtViewMainText2"
                style="@style/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/urgent_help"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_153"
                    style="@style/mainButton"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:text="153" />

                <Button
                    android:id="@+id/btn_180"
                    style="@style/mainButton"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="180"/>
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="45dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txtViewHelpOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/secondaryText"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/view_help_options"
                android:textColor="#000500" />

            <Button
                android:id="@+id/btnServices"
                style="@style/mainButton"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:text="@string/available_services" />

        </LinearLayout>
    </ScrollView>
</layout>