<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/servicesLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".module.help_screens.view.HelpServicesFragment">

...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo_together" />

            <ImageView
                android:id="@+id/img_back_from_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_logo_from_services"
                app:srcCompat="@drawable/ic_arrow_back" />
        </androidx.constraintlayout.widget.ConstraintLayout>
...
